<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_label_location"
        android:key="@string/pref_key_location"
        android:defaultValue="@string/pref_value_default_location"
        android:inputType="text"
        android:singleLine="true"
    />

    <ListPreference
        android:title="@string/pref_label_units"
        android:key="@string/pref_key_units"
        android:defaultValue="@string/pref_value_units_metric"
        android:entries="@array/pref_options_units"
        android:entryValues="@array/pref_values_units"
    />

    <CheckBoxPreference
        android:title="@string/pref_label_enable_notifications"
        android:key="@string/pref_key_enable_notifications"
        android:summaryOff="@string/pref_value_enable_notifications_false"
        android:summaryOn="@string/pref_value_enable_notifications_true"
        android:defaultValue="@string/pref_value_enable_notifications_default"
    />

</PreferenceScreen>
